--- a/src/static/stylesheets/layout.scss
+++ b/src/static/stylesheets/layout.scss
@@ -1,12 +1,15 @@
 .video-level {
   display: flex;
-  height: 500px;
-  max-height: 500px;
+  height: 800px;
+  max-height: 100%;
+  overflow: hidden;
+  resize: vertical;
   width: 100%;
 }
 
-.pusher {
-  background-color: $elv-color-darkgray;
+.side-panel {
+  border-bottom: 1px solid $elv-color-darkgray;
+  border-right: 1px solid $elv-color-darkgray;
   overflow: auto;
   resize: horizontal;
   width: 500px;
