--- a/src/static/stylesheets/video.scss
+++ b/src/static/stylesheets/video.scss
@@ -9,6 +9,7 @@
 
 .video-container {
   background-color: $elv-color-bg-black;
+  border-bottom: 1px solid $elv-color-darkgray;
   display: flex;
   height: 100%;
   justify-content: center;
@@ -16,9 +17,10 @@
 }
 
 video {
-  border-bottom: 1px solid $elv-color-darkgray;
   cursor: pointer;
   display: block;
+  height: 100%;
+  max-height: 100%;
   max-width: 100%;
 }
 
