--- a/src/static/stylesheets/video.scss
+++ b/src/static/stylesheets/video.scss
@@ -2,7 +2,7 @@
   background-color: $elv-color-bg-dark;
   border-bottom: 1px solid $elv-color-darkgray;
   display: grid;
-  grid-template-rows: 1fr 35px 30px 30px 50px;
+  grid-template-rows: 1fr 35px 50px;
   height: 100%;
   max-height: 100%;
   width: 100%;
@@ -110,77 +110,4 @@ select {
 .video-time {
   text-align: center;
   width: 100%;
-}
-
-.video-seek,
-.video-scale {
-  &.rc-slider {
-    cursor: pointer;
-    height: $elv-spacing-s;
-    margin: 0 $elv-spacing-m;
-    width: auto;
-  }
-
-  .rc-slider-rail {
-    background-color: $elv-color-black;
-  }
-
-  .rc-slider-track {
-    background-color: $elv-color-darkgray;
-  }
-}
-
-//* Slider styling *//
-
-// Hide main video progress handle
-.video-seek {
-  &.video-seek {
-    .rc-slider-handle {
-      background-color: transparent;
-    }
-  }
-}
-
-// Make current time indicator on scale a blue line
-.video-scale {
-  &.rc-slider {
-    .rc-slider-handle-2 {
-      background-color: $elv-color-lightblue;
-      border-radius: 0;
-      height: 20px;
-      margin-left: -2px;
-      margin-top: -14px;
-      width: 3px;
-    }
-  }
-}
-
-.rc-slider {
-  .rc-slider-rail {
-    background-color: $elv-color-black;
-  }
-
-  .rc-slider-rail,
-  .rc-slider-track {
-    height: 6px;
-  }
-
-  .rc-slider-track {
-    background-color: $elv-color-darkgray;
-  }
-
-  .rc-slider-handle {
-    background-color: $elv-color-lightestgray;
-    border: 0;
-    border-radius: 100%;
-    cursor: pointer;
-    height: 10px;
-    margin-left: -5px;
-    margin-top: -2px;
-    width: 10px;
-
-    &:focus {
-      box-shadow: 0 0 3px $elv-color-lightestgray;
-    }
-  }
 }
