--- a/src/static/stylesheets/header.scss
+++ b/src/static/stylesheets/header.scss
@@ -1,6 +1,6 @@
 header {
   align-items: center;
-  border-bottom: 1px solid $elv-color-darkgray;
+  border-bottom: 1px solid $color-border;
   display: flex;
   height: 35px;
   padding: 0 $elv-spacing-xs;
