--- a/src/static/stylesheets/defaults.scss
+++ b/src/static/stylesheets/defaults.scss
@@ -1,6 +1,6 @@
 body {
-  background-color: $elv-color-bg-dark;
-  color: $elv-color-lightestgray;
+  background-color: $color-background;
+  color: $color-text;
 }
 
 .mono {
