Add resize handling for track canvas ; Add seek markers ; Add subtitle track toggle

--- a/src/static/stylesheets/colors.scss
+++ b/src/static/stylesheets/colors.scss
@@ -1,5 +1,6 @@
 $color-background: #201f1d;
 $color-foreground: #fafafa;
+$color-background-active: #403e3a;
 $color-text: #fafafa;
 $color-border: #444;
 $color-video-background: #000;
