--- a/src/static/stylesheets/header.scss
+++ b/src/static/stylesheets/header.scss
@@ -3,7 +3,7 @@ header {
   border-bottom: 1px solid $color-border;
   display: flex;
   height: 35px;
-  padding: 0 $elv-spacing-xs;
+  padding: 0 $elv-spacing-s;
 
   h1 {
     font-size: 20px;
