--- a/src/static/stylesheets/colors.scss
+++ b/src/static/stylesheets/colors.scss
@@ -3,6 +3,7 @@ $color-foreground: #fafafa;
 $color-background-active: #403e3a;
 $color-text: #fafafa;
 $color-border: #444;
+$color-border-active: #666;
 $color-video-background: #000;
 $color-rail: #505050;
 $color-rail-background: #000;
