Switch to custom slider component ; Add track time indicator ; Improve resize watching and handling

--- a/src/static/stylesheets/video.scss
+++ b/src/static/stylesheets/video.scss
@@ -1,6 +1,6 @@
 .video {
   background-color: $color-background;
-  border-bottom: 1px solid $color-border;
+  //border-bottom: 1px solid $color-border;
   display: grid;
   grid-template-rows: 1fr 35px 50px;
   height: 100%;
