--- a/src/static/stylesheets/defaults.scss
+++ b/src/static/stylesheets/defaults.scss
@@ -26,3 +26,16 @@ button {
     outline: 1px dotted $color-foreground;
   }
 }
+
+.async-component-loading,
+.async-component-error {
+  align-items: center;
+  display: flex;
+  height: 100%;
+  justify-content: center;
+  width: 100%;
+}
+
+.async-component-error {
+  color: $elv-color-red;
+}
