--- a/src/static/stylesheets/layout.scss
+++ b/src/static/stylesheets/layout.scss
@@ -1,3 +1,9 @@
+.menu-container {
+  position: absolute;
+  width: 400px;
+  z-index: 10000;
+}
+
 .video-level {
   display: flex;
   height: 500px;
@@ -9,6 +15,7 @@
 
 .side-panel {
   border-right: 1px solid $color-border;
+  min-width: 220px;
   overflow: auto;
   overflow-x: hidden;
   resize: horizontal;
