Rewrite video controls as small functional components

--- a/src/static/stylesheets/layout.scss
+++ b/src/static/stylesheets/layout.scss
@@ -1,4 +1,12 @@
+$header-height: 45px;
+
+header {
+  height: $header-height;
+}
+
 .menu-container {
+  height: calc(100% - #{$header-height});
+  max-height: calc(100% - #{$header-height});
   position: absolute;
   width: 400px;
   z-index: 10000;
