--- a/src/static/stylesheets/video.scss
+++ b/src/static/stylesheets/video.scss
@@ -5,6 +5,12 @@
   height: 100%;
   max-height: 100%;
   width: 100%;
+
+  .video-seek,
+  .video-scale {
+    margin-bottom: $elv-spacing-xs;
+    padding: 0 $elv-spacing-m;
+  }
 }
 
 .video-container {
@@ -95,6 +101,10 @@ video {
     margin-right: $elv-spacing-s;
     width: 125px;
   }
+}
+
+.video-controls-fullscreen {
+  padding-bottom: $elv-spacing-s;
 }
 
 select {
