--- a/src/static/stylesheets/video.scss
+++ b/src/static/stylesheets/video.scss
@@ -20,22 +20,23 @@
   justify-content: center;
   max-height: 100%;
   position: relative;
-}
 
-.video-poster {
-  cursor: pointer;
-  max-height: 100%;
-  object-fit: cover;
-  position: absolute;
-  width: 100%;
-}
+  .video-poster {
+    cursor: pointer;
+    max-height: 100%;
+    object-fit: contain;
+    position: absolute;
+    width: 100%;
+  }
 
-video {
-  cursor: pointer;
-  display: block;
-  height: 100%;
-  max-height: 100%;
-  max-width: 100%;
+  video {
+    cursor: pointer;
+    display: block;
+    height: 100%;
+    max-height: 100%;
+    max-width: 100%;
+    position: absolute;
+  }
 }
 
 .video-time,
