--- a/src/static/stylesheets/menu.scss
+++ b/src/static/stylesheets/menu.scss
@@ -5,6 +5,12 @@
   min-height: 500px;
   padding: $elv-spacing-s 0 0;
 
+  .menu-entries {
+    height: 100%;
+    max-height: 100%;
+    overflow-y: auto;
+  }
+
   ul {
     flex-direction: column;
   }
