--- a/src/static/stylesheets/defaults.scss
+++ b/src/static/stylesheets/defaults.scss
@@ -44,3 +44,9 @@ button {
 .async-component-error {
   color: $elv-color-red;
 }
+
+.wrap {
+  max-width: 100%;
+  word-break: break-all;
+  word-wrap: break-word;
+}
