--- a/src/static/stylesheets/menu.scss
+++ b/src/static/stylesheets/menu.scss
@@ -38,13 +38,28 @@
     flex-grow: 1;
     font-size: 20px;
     margin: 0;
-    padding: 0 0 0 $elv-spacing-s;
+    padding: 0 $elv-spacing-s;
     text-align: center;
+  }
+
+  h5 {
+    font-style: italic;
+    font-weight: normal;
+    padding: 0 $elv-spacing-s;
   }
 
   .menu-empty {
     margin-top: $elv-spacing-xl;
     text-align: center;
     width: 100%;
+  }
+
+  .video-info {
+    display: grid;
+    font-size: 14px;
+    grid-row-gap: $elv-spacing-s;
+    grid-template-columns: minmax(50px, 2fr) minmax(100px, 5fr);
+    max-width: 100%;
+    padding: $elv-spacing-s;
   }
 }
