Add keyboard controls

--- a/src/static/stylesheets/app.scss
+++ b/src/static/stylesheets/app.scss
@@ -5,6 +5,7 @@
 @import "./defaults";
 @import "./layout";
 @import "./header";
+@import "./keyboard-controls";
 @import "./video";
 @import "./tracks";
 @import "./entry";
