Add loading indicators for video and track controls

--- a/src/static/stylesheets/video.scss
+++ b/src/static/stylesheets/video.scss
@@ -39,6 +39,10 @@
   }
 }
 
+.video-controls-loading {
+  padding-top: $elv-spacing-xl;
+}
+
 .video-time,
 .video-controls {
   align-items: center;
