--- a/src/static/stylesheets/menu.scss
+++ b/src/static/stylesheets/menu.scss
@@ -5,6 +5,31 @@
   min-height: 500px;
   padding: $elv-spacing-s 0 0;
 
+  .menu-header {
+    align-self: center;
+    display: flex;
+    margin: 0 0 $elv-spacing-s $elv-spacing-xs;
+  }
+
+  .menu-back {
+    border-radius: 3px;
+    width: 50px;
+
+    &:hover {
+      background-color: $elv-color-darkgray;
+    }
+  }
+
+  h4 {
+    align-items: center;
+    display: flex;
+    flex-grow: 1;
+    font-size: 20px;
+    margin: 0;
+    padding: 0 $elv-spacing-xs;
+    text-align: center;
+  }
+
   .menu-entries {
     height: 100%;
     max-height: 100%;
@@ -24,22 +49,6 @@
     &:hover {
       background-color: $color-accent;
     }
-  }
-
-  .menu-header {
-    align-self: center;
-    display: flex;
-    margin-bottom: $elv-spacing-s;
-  }
-
-  h4 {
-    align-items: center;
-    display: flex;
-    flex-grow: 1;
-    font-size: 20px;
-    margin: 0;
-    padding: 0 $elv-spacing-s;
-    text-align: center;
   }
 
   h5 {
