Improve video resizing

--- a/src/static/stylesheets/app.scss
+++ b/src/static/stylesheets/app.scss
@@ -1,3 +1,4 @@
+@import "~react-resizable/css/styles.css";
 @import "~elv-components-js/src/stylesheets/defaults";
 @import "~elv-components-js/src/stylesheets/styles";
 @import "./colors";
