--- a/src/static/stylesheets/overlay.scss
+++ b/src/static/stylesheets/overlay.scss
@@ -1,11 +1,9 @@
 .overlay-container {
+  align-items: center;
   display: flex;
   flex-direction: column;
   height: 100%;
+  justify-content: center;
   z-index: 9999;
 }
 
-.overlay-canvas {
-  flex-grow: 1;
-  width: 100%;
-}
