--- a/src/static/stylesheets/video.scss
+++ b/src/static/stylesheets/video.scss
@@ -1,7 +1,8 @@
 .video-component {
   background-color: $color-background;
-  display: grid;
-  grid-template-rows: 1fr 35px 50px;
+  display: flex;
+  flex-direction: column;
+  flex-shrink: 1;
   height: 100%;
   max-height: 100%;
   width: 100%;
@@ -14,8 +15,10 @@
 }
 
 .video-container {
+  align-items: center;
   background-color: $color-video-background;
   display: flex;
+  flex-grow: 1;
   height: 100%;
   justify-content: center;
   max-height: 100%;
@@ -23,6 +26,7 @@
 
   .video-poster {
     cursor: pointer;
+    margin: auto;
     max-height: 100%;
     object-fit: contain;
     position: absolute;
@@ -32,7 +36,8 @@
   video {
     cursor: pointer;
     display: block;
-    height: 100%;
+    flex: 1 1 auto;
+    height: auto;
     max-height: 100%;
     max-width: 100%;
     position: absolute;
@@ -40,7 +45,7 @@
 }
 
 .video-controls-loading {
-  padding-top: $elv-spacing-xl;
+  height: 500px;
 }
 
 .video-time,
@@ -51,7 +56,14 @@
   justify-content: center;
 }
 
+.video-time {
+  height: 35px;
+  text-align: center;
+  width: 100%;
+}
+
 .video-controls {
+  height: 50px;
   position: relative;
 
   button {
@@ -126,9 +138,4 @@ select {
   &.video-playback-rate {
     width: 50px;
   }
-}
-
-.video-time {
-  text-align: center;
-  width: 100%;
 }
