--- a/src/static/stylesheets/menu.scss
+++ b/src/static/stylesheets/menu.scss
@@ -1,5 +1,5 @@
 .menu-container {
-  background-color: $color-background-active;
+  background-color: $color-background;
   border-bottom: 1px solid $color-border;
   border-right: 1px solid $color-border;
   min-height: 500px;
