--- a/src/static/stylesheets/colors.scss
+++ b/src/static/stylesheets/colors.scss
@@ -1,8 +1,8 @@
-$color-background: #201f1d;
-$color-foreground: #fafafa;
-$color-background-active: #34322f;
-$color-text: #fafafa;
-$color-border: #444;
+$color-background: #131315;
+$color-foreground: #acacac;
+$color-background-active: #2c2a28;
+$color-text: #f0f0f0;
+$color-border: #3a3a3a;
 $color-border-active: #666;
 $color-video-background: #000;
 $color-rail: #505050;
