--- a/src/static/stylesheets/header.scss
+++ b/src/static/stylesheets/header.scss
@@ -14,7 +14,7 @@ header {
 
   .menu-button {
     height: 100%;
-    margin-right: $elv-spacing-xs;
+    margin-right: $elv-spacing-s;
     padding: 0 $elv-spacing-xs;
 
     i {
