--- a/src/static/stylesheets/tracks.scss
+++ b/src/static/stylesheets/tracks.scss
@@ -7,6 +7,7 @@
   background-color: $elv-color-lightblue;
   margin-left: -1px;
   opacity: 0.6;
+  pointer-events: none;
   position: absolute;
   width: 4px;
 }
