--- a/src/static/stylesheets/app.scss
+++ b/src/static/stylesheets/app.scss
@@ -1,7 +1,8 @@
 @import "~react-resizable/css/styles.css";
 @import "~elv-components-js/src/stylesheets/defaults";
 @import "~elv-components-js/src/stylesheets/styles";
-@import "./colors";
+@import "./variables/colors";
+@import "./variables/fonts";
 
 @import "./defaults";
 @import "./layout";
