--- a/src/static/stylesheets/entry.scss
+++ b/src/static/stylesheets/entry.scss
@@ -2,8 +2,7 @@
   padding: $elv-spacing-s;
 
   h4 {
-    color: $color-foreground;
-    font-size: 16px;
+    color: $color-text;
     font-weight: 500;
     margin: 0 0 $elv-spacing-s;
     min-width: 200px;
@@ -14,12 +13,13 @@
 
 .entry {
   display: grid;
-  font-size: 14px;
+  font-size: $font-s;
   grid-row-gap: $elv-spacing-xxs;
 
   grid-template-columns: 120px 1fr;
 
   label {
+    color: $color-foreground;
     grid-column: 1;
   }
 
@@ -38,6 +38,7 @@
     @include elv-no-select;
     color: $elv-color-text-lighter;
     flex: 1 1 0;
+    font-size: $font-s;
     min-width: 4em;
     text-align: center;
   }
@@ -63,6 +64,7 @@
 }
 
 .entry-time {
+  font-size: $font-s;
   margin-top: $elv-spacing-xs;
   text-align: center;
 }
