--- a/src/static/stylesheets/header.scss
+++ b/src/static/stylesheets/header.scss
@@ -1,6 +1,5 @@
 header {
   align-items: center;
-  border-bottom: 1px solid $color-border;
   display: flex;
   justify-content: space-between;
 
@@ -14,11 +13,10 @@ header {
 
   .menu-button {
     height: 100%;
-    margin-right: $elv-spacing-s;
-    padding: 0 $elv-spacing-xs;
+    margin-right: $elv-spacing-xs;
 
-    i {
-      height: 75%;
+    svg {
+      padding: $elv-spacing-xs;
     }
   }
 
@@ -31,7 +29,7 @@ header {
   }
 
   h1 {
-    font-size: 20px;
+    font-size: $font-l;
     font-weight: normal;
   }
 
