--- a/src/static/stylesheets/menu.scss
+++ b/src/static/stylesheets/menu.scss
@@ -24,7 +24,7 @@
     align-items: center;
     display: flex;
     flex-grow: 1;
-    font-size: 20px;
+    font-size: $font-l;
     margin: 0;
     padding: 0 $elv-spacing-xs;
     text-align: center;
@@ -65,7 +65,7 @@
 
   .video-info {
     display: grid;
-    font-size: 14px;
+    font-size: $font-s;
     grid-row-gap: $elv-spacing-s;
     grid-template-columns: minmax(50px, 2fr) minmax(100px, 5fr);
     max-width: 100%;
