--- a/src/static/stylesheets/variables/colors.scss
+++ b/src/static/stylesheets/variables/colors.scss
@@ -1,10 +1,10 @@
 $color-background: #131315;
-$color-foreground: #acacac;
+$color-background-video: #000;
 $color-background-active: #2c2a28;
+$color-foreground: #acacac;
 $color-text: #f0f0f0;
 $color-border: #3a3a3a;
 $color-border-active: #666;
-$color-video-background: #000;
-$color-rail: #505050;
+$color-rail: #464646;
 $color-rail-background: #000;
 $color-accent: #0c89c7;
