--- a/src/static/stylesheets/header.scss
+++ b/src/static/stylesheets/header.scss
@@ -14,6 +14,7 @@ header {
   .menu-button {
     height: 100%;
     margin-right: $elv-spacing-xs;
+    z-index: 1001;
 
     svg {
       padding: $elv-spacing-xs;
