--- a/src/static/stylesheets/video.scss
+++ b/src/static/stylesheets/video.scss
@@ -24,18 +24,22 @@
 
   .video-poster {
     cursor: pointer;
+    height: 100%;
+    left: 0;
     margin: auto;
     max-height: 100%;
     object-fit: contain;
-    position: relative;
+    position: absolute;
+    top: 0;
     width: 100%;
+    z-index: 10000;
   }
 
   video {
     cursor: pointer;
     display: block;
     flex: 1 1 auto;
-    height: auto;
+    height: 100%;
     max-height: 100%;
     max-width: 100%;
     position: absolute;
@@ -92,7 +96,10 @@
   position: relative;
 
   button {
+    align-items: center;
+    display: flex;
     height: $font-l;
+    justify-content: center;
     width: 50px;
 
     svg {
